--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 img/tags
-
 img/publicity/
+img/groups/0eb2f7fff792aecd7f10919f2cd7f7ff
+img/groups/8d0f9528945da9dc9bc4aea9654745bb
+img/groups/ca0be0a9d61421e5dbdf7040ee44b3e1
