ajustes views * soporte para vistas en 2 o 3 paneles * agregadas excepciones a gitignore
Former-commit-id: f8036e379ab08b40d5ccb9596cec43c83b877436

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
+.security/
 img/tags
 img/publicity/
-img/groups/0eb2f7fff792aecd7f10919f2cd7f7ff
-img/groups/8d0f9528945da9dc9bc4aea9654745bb
-img/groups/ca0be0a9d61421e5dbdf7040ee44b3e1
-img/groups/ceb746a315d90d27dac5e1b2b42ce64f
+img/groups/
 img/bc_templates
 img/users
