agregada carpeta de seguridad
Former-commit-id: 16c3acf16cbae41cb9381222f3139a32dc27a078

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.security/
+.security/*.php
 img/tags
 img/publicity/
 img/groups/
@@ -6,4 +6,6 @@ img/bc_templates
 img/users/
 img/tags/
 img/store/
+
+
 main/
