--- a/produccion/.htaccess
+++ b/produccion/.htaccess
@@ -16,5 +16,5 @@
 
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule ^(.*)$ /index.php [L]
+	RewriteRule ^(.*)$ /tb.php [L]
 </IfModule>
