--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^wpanel/(.*)$ wpanel/index.php [L]
 
+	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)$ index.php [L]
 </IfModule>
