--- a/img/.htaccess
+++ b/img/.htaccess
@@ -3,12 +3,13 @@ Options +FollowSymLinks -indexes
 RewriteEngine On
 
 #servidor principal
-RewriteCond %{HTTP_HOST} ^(www)?\.tagbum\.com|68\.109\.244\.199 [NC]
+RewriteCond %{HTTP_HOST} ^(www\.)?tagbum\.com|68\.109\.244\.199 [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ http://i.tagbum.com/$1 [L]
 
 #general
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^.*$ - [L,R=404]
 </IfModule>
