--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ RewriteEngine On
 #servidor de imagenes
 RewriteCond %{HTTP_HOST} ^i\.tagbum\.com|68\.109\.244\.201 [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ img.php/$1 [L]
+RewriteRule ^(.*)$ img/index.php [L]
 
 #servidor de videos
 RewriteCond %{HTTP_HOST} ^v.*\.tagbum\.com|68\.109\.244\.19[6-8] [NC]
