--- a/video_server/.htaccess
+++ b/video_server/.htaccess
@@ -6,9 +6,8 @@ RewriteEngine On
 #ErrorDocument 403 errors/403.php
 #ErrorDocument 404 errors/404.php
 
-#servidor de videos
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteRule ^(.*)$ index.php [L]
 
 </IfModule>
