ignore funciones generadas por lenguaje
Former-commit-id: a3d871d1434a2b0ee97a64b18e42e4900b86dc17

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ local/*.*
 quepeo.php
 video_server/jqueryupload/
 
+js/funciones_en.js
+js/funciones_es.js
 
 main/views/templates/tags.php
 video_server/list.php
