gitignore - video server
Former-commit-id: 4bfa6a176408ca1a58af91f67adb5f10a631f9df [formerly 46095aca4f37ad3fce1cd3337c28e0e6987cf031]
Former-commit-id: 289b9816ac4f736b447bc7a9140069a8d1836610

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 img/*/
 language/
 img_server/img/
-video_server/videos/
 
 #security
 includes/security/*.php
@@ -16,6 +15,7 @@ video_server/jqueryupload/
 js/funciones_en.js
 js/funciones_es.js
 
+video_server/videos/pending/*
+video_server/videos/*/*
+
 main/views/templates/tags.php
-video_server/list.php
-video_server/upload.php
