--- a/app/.htaccess
+++ b/app/.htaccess
@@ -5,5 +5,9 @@ RewriteEngine On
 #general
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)\.html$ $1.php [L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^.*$ - [L,R=404]
 </IfModule>
