omitir archivos de proyecto de xdk
Former-commit-id: e1cff1e1b767b6619d0308b07f575e188731adfe [formerly ed8d775ee18d4a173ae637143b3b8e8c11afda4c]
Former-commit-id: d52a479626996a93847baf62e871edcc00b8b1b5

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ video_server/videos/*/*
 
 main/views/templates/tags.php
 
-Tag.xdk
-Tag.xdke
+local/xdk/*.xdk
+local/xdk/*.xdke
 
 language/en.php
 language/es.php
