omitidos de git los cambios de xdk (minify)
Former-commit-id: db783ebee569a76edcea25dc77d2d3ec8d22262f [formerly dc9af55becfa4d719da03b8172617772c5d32931]
Former-commit-id: 32e756c7e28c52a46c80c1da5ea4e351727be947

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,10 @@ video_server/videos/*/*
 
 main/views/templates/tags.php
 
+local/xdk/*.html
 local/xdk/*.xdk
 local/xdk/*.xdke
+local/xdk/js/min.js
 
 language/en.php
 language/es.php
