--- a/.gitignore
+++ b/.gitignore
@@ -12,17 +12,11 @@ video_server/videos/pending/*
 video_server/videos/*/*
 video_server/*
 
-<<<<<<< HEAD
-main/views/templates/tags.php
 
-local/xdk/*
-local/xdk/css/*
-local/xdk/js/*
-=======
 local/xdk/*.html
 local/xdk/*.xdk*
 local/xdk/js/min.js
->>>>>>> origin/master
+
 
 js/funciones_es.js
 app/css/smt/old/
@@ -38,6 +32,7 @@ web_root/js/funciones_*.js
 #img server
 img_root/includes/security/*.php
 img_root/img/
+img/
 
 #video server
 video_root/includes/security/*.php
