--- a/img_root/img/.htaccess
+++ b/img_root/img/.htaccess
@@ -21,7 +21,7 @@ Options +FollowSymLinks -indexes
 RewriteEngine On
 
 #general
-RewriteCond %{SERVER_NAME} !^localhost|127(\.\d+){3}|192\.168(\.\d+){2}
+#RewriteCond %{SERVER_NAME} tagbum\.com$
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ http://68.109.244.201/img/$1 [L]
