Ignore de phpStorm
Ignore del proy de phpStorm

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ local/xdk/*.xdk*
 
 
 
+.idea/.name
+.idea/encodings.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/tag.iml
+.idea/vcs.xml
+.idea/workspace.xml
