--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,4 @@ local/xdk/*.xdk*
 
 
 
-.idea/.name
-.idea/encodings.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/tag.iml
-.idea/vcs.xml
-.idea/workspace.xml
+.idea/*
