--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,11 @@ ErrorDocument 403 "Error 403: Forbidden"
 ErrorDocument 404 "Error 404: File not found"
 ErrorDocument 500 "Error 500: Internal server error"
 
+#temp (carpeta de pruebas)
+RewriteCond %{SERVER_NAME} ^temp\.
+RewriteCond %{REQUEST_URI} !^/temp_root/
+RewriteRule ^(.*)$ temp_root/$1 [L]
+
 #global
 RewriteCond %{REQUEST_URI} !^/(app|img|video|web)_root/
 RewriteRule ^(app|img|video|web)([\?/].*$|$) $1_root$2 [NC,L]
